--- a/LANDEE.html
+++ b/LANDEE.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="LANDEEs.css">
 	
-	<link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_bhpkz8v51anel8fr.css">
+	<link rel="stylesheet" type="text/css" href="css/font-icon.css">
+	<link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_hlgcns82yu45z5mi.css">
 	<script src="js/jquery-1.11.1.js"></script>
 	<script src="js/bootstrap.js"></script>
 	<!-- <script src="swiper/jquery-1.10.1.min.js"></script>
